services/elasticsearch/k8s/full-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-full
  namespace: logging
  labels:
    component: elasticsearch
    role: full
spec:
  serviceName: elasticsearch-logging
  replicas: 3
  selector:
    matchLabels:
      component: elasticsearch
      role: full
  template:
    metadata:
      labels:
        component: elasticsearch
        role: full
    spec:
      containers:
        - name: es-full
          image: russellsherman/elasticsearch:6.6.0
          resources:
            limits:
              cpu: 2
            requests:
              cpu: 1
              memory: 1Gi
          ports:
            - containerPort: 9300
              name: transport
            - containerPort: 9200
              name: http
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 60
          volumeMounts:
            - name: config
              mountPath: /elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: storage-full
              mountPath: /data
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - full
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: config
          configMap:
            name: es-configmap
  volumeClaimTemplates:
    - metadata:
        name: storage-full
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
