services/elasticsearch/k8s/elasticsearch-hq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-hq
  namespace: logging
  labels:
    component: elk
    role: elasticsearch-hq
spec:
  selector:
    component: elk
    role: elasticsearch-hq
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-hq
  namespace: logging
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - host: elasticsearch-hq.internal.carlosedp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch-hq
              servicePort: 80
